# Birds2Watch

./: README.md  pyproject.toml
.history/: .env_20250128092228  .env_20250128092344  .env_20250128092352  pyproject_20250128091357.toml  pyproject_20250128091701.toml
.history/app/: main_20250127225511.py
.history/app/adapters/: database_20250127225417.py  database_20250127225426.py  database_20250127225450.py  database_20250127225500.py  database_20250127225941.py  database_20250128092741.py  database_20250128092820.py  database_20250128092823.py
.history/app/adapters/repositories/: bird_repository_20250128120608.py  bird_repository_20250128120639.py
.history/app/core/: config_20250128092421.py  exceptions_20250127225856.py  exceptions_20250127225902.py
.history/app/domain/entities/: base_entity_20250128120346.py  base_entity_20250128120511.py  base_entity_20250128120529.py  base_entity_20250128120535.py  base_entity_20250128120538.py  bird_entity_20250127222449.py  bird_entity_20250127225812.py  bird_entity_20250128115810.py  bird_entity_20250128120358.py  bird_entity_20250128120401.py  bird_entity_20250128120415.py  bird_entity_20250128120416.py
.history/app/interface/api/: dependencies_20250127225637.py  dependencies_20250127225642.py
app/adapters/persistence/models/: bird_model.py
app/adapters/repositories/: bird_repository.py
app/core/: exceptions.py
app/domain/interfaces/: bird_repository.py
app/interface/api/routes/: bird_routes.py
app/interface/api/schemas/: bird_schema.py
app/use_cases/bird/: create_bird_use_case.py
(+4 files in other folders)
